--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,38 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+build/org/usfirst/frc/team4028/robot/subsystems/Climber.class
+*.class
+*.class
+*.jar
+*.class
+*.jar
+build/jars/cscore.jar
+*.jar
+*.jar
+*.class
+*.class
+/bin/
